[package]
name = "property-based-testing-101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"

[profile.dev]
overflow-checks = false
